--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -9,6 +9,7 @@ body {
 
 h1 {
   text-align: center;
+  font-size: 1.75em;
 }
 
 section {
@@ -17,9 +18,13 @@ section {
   background-color: white;
 }
 
+div {
+  float: left;
+}
+
 p {
   clear: both;
-  padding: 5px;
+  padding: 0px 10px 0px 10px;
 }
 
 section>h2 {
@@ -29,7 +34,7 @@ section>h2 {
   padding: 5px 20px 5px 20px;
   text-align: center;
   margin-top: 0;
-
+  font-size: 1.25em;
 }
 
 #ae>h2 {
@@ -45,26 +50,8 @@ section>h2 {
 
 }
 
-
-
-
 /********** Large devices only **********/
 @media (min-width: 992px) {
-
-  .col-lg-1,
-  .col-lg-2,
-  .col-lg-3,
-  .col-lg-4,
-  .col-lg-5,
-  .col-lg-6,
-  .col-lg-7,
-  .col-lg-8,
-  .col-lg-9,
-  .col-lg-10,
-  .col-lg-11,
-  .col-lg-12 {
-    float: left;
-  }
 
   .col-lg-1 {
     width: 8.33%;
@@ -118,21 +105,6 @@ section>h2 {
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
 
-  .col-md-1,
-  .col-md-2,
-  .col-md-3,
-  .col-md-4,
-  .col-md-5,
-  .col-md-6,
-  .col-md-7,
-  .col-md-8,
-  .col-md-9,
-  .col-md-10,
-  .col-md-11,
-  .col-md-12 {
-    float: left;
-  }
-
   .col-md-1 {
     width: 8.33%;
   }
@@ -182,23 +154,8 @@ section>h2 {
   }
 }
 
-/********** Medium devices only **********/
+/********** Small devices only **********/
 @media (max-width: 767px) {
-
-  .col-sm-1,
-  .col-sm-2,
-  .col-sm-3,
-  .col-sm-4,
-  .col-sm-5,
-  .col-sm-6,
-  .col-sm-7,
-  .col-sm-8,
-  .col-sm-9,
-  .col-sm-10,
-  .col-sm-11,
-  .col-sm-12 {
-    float: left;
-  }
 
   .col-sm-1 {
     width: 8.33%;
