--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,99 +1,114 @@
 /* Using the twitter bootstrap CSS version 4.5.0 */
 
 html {
-	font-size: 100%;
-	
+  font-size: 100%;
+
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	background-color: cornsilk;
-	font-family:  charter, georgia, times, serif;
+  background-color: cornsilk;
+  font-family: charter, georgia, times, serif;
 }
 
 .container {
-	padding: 0;
+  padding: 0;
 }
 
 .row {
-	width: 100%;
-	margin-right: auto;
-	margin-left: auto;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #navbar-header {
-	background-color: khaki;
-	padding-left: 0;
-	padding-right: 0;
-	padding-bottom: 0;
+  background-color: khaki;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
 }
 
 #navbar-header span {
-	padding-left: 15px;
+  padding-left: 15px;
 }
 
 .navbar-brand a {
-	color: darkgreen;
-	text-decoration: none;
+  color: darkgreen;
+  text-decoration: none;
 }
 
 .navbar-brand a:hover {
-	color: seagreen;
+  color: seagreen;
 }
 
 #navbar-header button.navbar-toggler {
-	border: 1px solid darkgreen;
-	margin-right: 20px;
+  border: 1px solid darkgreen;
+  margin-right: 20px;
 }
 
 #nav-list a.nav-link {
-	background-color: darkgreen;
-	color: khaki;
+  background-color: darkgreen;
+  color: khaki;
 }
 
 #nav-list a.nav-link:hover {
-	background-color: lemonchiffon;
-	color: darkgreen;
-}
+  background-color: seagreen;
 
+}
 
 #navbar-header button.navbar-toggler:hover {
-	background-color: lemonchiffon;
+  background-color: lemonchiffon;
 }
- 
 
 #nav-list span {
-	font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 #menu-title {
-	padding-top: 20px;
-	padding-bottom: 35px;
-	font-family: helvetica;
-	color: forestgreen;
-	text-shadow: 2px 2px 2px black;
-	text-transform: uppercase;
-	font-style: italic;
+  padding-top: 20px;
+  padding-bottom: 35px;
+  font-family: helvetica;
+  color: forestgreen;
+  text-shadow: 2px 2px 2px black;
+  text-transform: uppercase;
+  font-style: italic;
 }
 
 #chicken-content {
-	background-image: url('../images/menu_bg.jpg');
-	margin-bottom: 30px;
-	margin-left: 30px;
-	margin-right: 30px;
-	box-shadow: 3px 3px 30px #808000, -3px -3px 30px #808000;
+  background-image: url('../images/menu_bg.jpg');
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  box-shadow: 3px 3px 30px #808000, -3px -3px 30px #808000;
 }
-
 
 #chicken-content .dummy-text {
-	padding: 20px 20px 20px 30px; 
+  padding: 20px 20px 20px 20px;
+  text-align: justify;
 
 }
 
-#chicken-content .text-center {
-	padding-top: 20px;
+#back-up a {
+  color: darkgreen;
+  font-size: 3em;
+}
+
+#back-up a:hover {
+  color: seagreen;
+
+}
+
+#chicken,
+#beef,
+#sushi {
+  font-weight: bold;
+  color: darkgreen;
+}
+
+#chicken-content div.content-title {
+  padding-top: 20px;
 }
 
