--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -112,3 +112,15 @@ body {
   padding-top: 20px;
 }
 
+footer {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+footer>a{
+  color: darkgreen;
+}
+
+footer>a:hover{
+  color: seagreen;
+}
